Modified First.html file some components.

--- a/First.html
+++ b/First.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage</title>
 </head>
-<body><center>
+<body align="center">
     <h1>
         My First Webpage
         
@@ -18,6 +18,5 @@
         I look forward to creating more complex webpages in the future.
     </p>
     <img src="https://imgs.search.brave.com/trl2YEqYMJ_7EjiExkqOQoKclKoYHCjUN41lhidgCk4/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93d3cu/ZnJlZWNvZGVjYW1w/Lm9yZy9uZXdzL2Nv/bnRlbnQvaW1hZ2Vz/L3NpemUvdzIwMDAv/MjAyMS8wOC9pbWdU/YWcucG5n" alt="my">
-
 </body>
 </html>
