--- a/css-practice/task4.html
+++ b/css-practice/task4.html
@@ -5,46 +5,141 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typography Practice - Task 4</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
         body {
             margin: 0;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
+            font-family: 'Poppins', sans-serif;
             padding: 20px;
+            position: relative;
+            overflow-x: hidden;
         }
 
         .text-section {
             max-width: 600px;
-            background: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            background: rgba(255, 255, 255, 0.95);
+            padding: 40px;
+            border-radius: 16px;
+            box-shadow: 
+                0 4px 30px rgba(0, 0, 0, 0.1),
+                inset 0 0 20px rgba(255, 255, 255, 0.5);
+            backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .text-section:hover {
+            transform: translateY(-5px);
+            box-shadow: 
+                0 8px 40px rgba(0, 0, 0, 0.15),
+                inset 0 0 20px rgba(255, 255, 255, 0.5);
         }
 
         h1 {
-            color: #333;
-            font-size: 2.5em;
-            margin-bottom: 0.5em;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
-            letter-spacing: 1px;
+            color: transparent;
+            background: linear-gradient(45deg, #ff6b6b, #ffa07a);
+            -webkit-background-clip: text;
+            background-clip: text;
+            font-size: 3em;
+            margin-bottom: 0.8em;
+            font-weight: 600;
+            letter-spacing: 2px;
             line-height: 1.2;
+            position: relative;
+            animation: slideIn 0.8s ease-out;
+        }
+
+        h1::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            width: 60px;
+            height: 4px;
+            background: linear-gradient(45deg, #ff6b6b, #ffa07a);
+            border-radius: 2px;
+            animation: expandLine 0.8s ease-out forwards;
         }
 
         p {
-            color: #666;
-            line-height: 1.6;
-            margin-bottom: 1em;
-            text-transform: none;
-            letter-spacing: 0.5px;
+            color: #4a5568;
+            line-height: 1.8;
+            margin-bottom: 1.5em;
+            letter-spacing: 0.3px;
+            font-weight: 300;
+            font-size: 1.1em;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 0.8s ease-out forwards;
+        }
+
+        p:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        p:nth-child(3) {
+            animation-delay: 0.4s;
         }
 
         .highlight {
-            color: #2c5282;
-            font-weight: bold;
-            text-shadow: 1px 1px 2px rgba(44,82,130,0.2);
+            background: linear-gradient(120deg, #ffd93d 0%, #ff6b6b 100%);
+            color: transparent;
+            -webkit-background-clip: text;
+            background-clip: text;
+            font-weight: 600;
+            position: relative;
+            display: inline-block;
+        }
+
+        .highlight::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: -2px;
+            left: 0;
+            background: linear-gradient(120deg, #ffd93d 0%, #ff6b6b 100%);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.3s ease;
+        }
+
+        .highlight:hover::after {
+            transform: scaleX(1);
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateX(-50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes expandLine {
+            from {
+                width: 0;
+                opacity: 0;
+            }
+            to {
+                width: 60px;
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
